--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -10,10 +10,10 @@
     <script src="./js/app.js"></script>
 </head>
 <body>
-    <div>
+    <div class="main-content">
         {{>header}}
 
-        <img src="./img/about.png">
+        <img src="./img/about.png" class="portrait">
     </div>
 
     {{>footer}}
