--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -10,7 +10,7 @@
     <script src="./js/app.js"></script>
 </head>
 <body>
-    <div>
+    <div class="main-content">
         {{>header}}
 
         <p>Use this site to get weather</p>
